hphp/test/zend/good/Zend/tests/foreach_temp_array_expr_with_refs.php
<?php

$a = 'a';
$b = 'b';

foreach ([&$a, &$b] as &$value) {
    $value .= '-foo';
}

var_dump($a, $b);

?>